objects/vlocity_ins__PolicyTransaction__c.object
<CustomObject>
    <description>DEPRECATED. Replaced by Transaction (AssetTransaction_c). Master-detail child object of Policy (deprecated).</description>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyId__c</fullName>
        <label>Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipLabel>Policy Transactions</relationshipLabel>
        <relationshipName>PolicyTransactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PostDate__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TransactionDate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Premium Paid</fullName>
                </value>
                <value>
                    <fullName>Billing Notice</fullName>
                </value>
                <value>
                    <fullName>Surrender</fullName>
                </value>
                <value>
                    <fullName>Policy Loan</fullName>
                </value>
                <value>
                    <fullName>Lapse</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Changed/Endorsed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Policy Transaction</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>